@@ -130,7 +130,7 @@
 .\" ========================================================================
 .\"
 .IX Title "FLIPIT 1"
-.TH FLIPIT 1 "2003-02-18" "flipit version 0.3.4" "flipit 0.3.4"
+.TH FLIPIT 1 "2003-04-23" "flipit version 0.3.5" "flipit 0.3.5"
 .UC
 .SH "NAME"
 flipit \- control the X10 Firecracker (\s-1CM17A\s0)
@@ -141,7 +141,7 @@ flipit \- control the X10 Firecracker (\s-1CM17A\s0)
 .Ve
 .SH "DESCRIPTION"
 .IX Header "DESCRIPTION"
-This document describes flipit version 0.3.4.
+This document describes flipit version 0.3.5.
 .PP
 Flipit allows you to control X10 devices with your Unix computer by
 means of a Firecracker (model number \s-1CM17A\s0) plugged into a serial
