@@ -39,7 +39,7 @@
 <P>
 <HR>
 <H1><A NAME="description">DESCRIPTION</A></H1>
-<P>This document describes flipit version 0.3.4.</P>
+<P>This document describes flipit version 0.3.5.</P>
 <P>Flipit allows you to control X10 devices with your Unix computer by
 means of a Firecracker (model number CM17A) plugged into a serial
 port.</P>
