@@ -1,3 +1,7 @@
+User visible changes for flipit version 0.3.5, Apr 23, 2003:
+
+        flipit.c now includes <string.h>
+
 User visible changes for flipit version 0.3.4, Feb 18, 2003:
 
         Fixed bug in "brighten" and "dim" command processing.
